# rial

./: .gitignore  ALL_IMPROVEMENTS_COMPLETE.md  ANTI_AI_PROOF.md  ANTI_AI_PROOF_ENABLED.md  BACKEND_URL_SETUP.md  BLOCKCHAIN_IMPLEMENTATION.md  CONTRIBUTING.md  CROP_IMPROVEMENTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  ENVIRONMENT_VARIABLES.md  FINAL_APP_SUMMARY.md  FINAL_FRAUD_DETECTION_FIX.md  FIXES_APPLIED.md  FLEXIBLE_SIZE_GUIDE.md  GALLERY_FIX.md  GITHUB_PUBLISHED.md  HOW_TO_VERIFY.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  INSURANCE_VERIFICATION_GUIDE.md  IOS_LOCAL_NETWORK_FIX.md  IOS_ZK_IMG_TEST_GUIDE.md  IPHONE_CROP_GUIDE.md  LATEST_IMPROVEMENTS.md  LICENSE  PHOTO_AUTHENTICITY_TESTING_GUIDE.md  QUICK_START.md  README.md  READY_TO_TEST.md  SECURE_VERIFICATION_SYSTEM.md  SECURITY_VERIFICATION.md  SYSTEM_COMPLETE.md  TEST_BACKEND.md  TEST_FRAUD_DETECTION.md  TEST_RESULTS.md  UI_IMPROVEMENTS.md  demo-all-features.js  docker-compose.yml  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
Sources/: AuthenticityManager.swift
backend/: AI_TESTING_QUICK_REF.txt  Dockerfile  PERFORMANCE_OPTIMIZATION.md  ZK_IMG_DEMO_SUMMARY.md  batch-processor.js  batch-report-1762666569212.json  batch-report-1762667114767.json  benchmark-results.json  benchmark.js  blockchain-service.js  config.template.env  demo-privacy.js  get-tunnel-url.sh  image-transformer.js  image-verification-endpoint.js  package-lock.json  (+30 more)
backend/zk-img-halo2/: Cargo.toml
backend/zk-img-halo2/src/: circuits.rs  image_utils.rs  lib.rs  proof_system.rs  recursive_circuit.rs  transforms.rs
(+81 files in other folders)
