[package]
name = "zk-img-halo2"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
halo2curves = { version = "0.3", features = ["pasta"] }
ff = "0.12"
group = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
